Fixed navbar logo misplacement when navbar is collapsed

--- a/finsoc/app/assets/stylesheets/application.scss
+++ b/finsoc/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
+// navbar expand width (must be before bootstrap)
+$grid-float-breakpoint: 1100px;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
